[package]
name = "bunsan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
arc-swap = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
notify = "6.1.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
